// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizePluginOptions should reject bad createRedirects user inputs 1`] = `
"Invalid @docusaurus/plugin-client-redirects options: \\"createRedirects\\" must be of type function
  {
  \\"createRedirects\\": [
    \\"bad\\",
    \\"value\\"
  ]
}"
`;

exports[`normalizePluginOptions should reject bad fromExtensions user inputs 1`] = `
"Invalid @docusaurus/plugin-client-redirects options: \\"fromExtensions[0]\\" contains an invalid value
  {
  \\"fromExtensions\\": [
    null,
    null,
    123,
    true
  ]
}"
`;

exports[`normalizePluginOptions should reject bad toExtensions user inputs 1`] = `
"Invalid @docusaurus/plugin-client-redirects options: \\"toExtensions[0]\\" contains an invalid value
  {
  \\"toExtensions\\": [
    null,
    null,
    123,
    true
  ]
}"
`;
